src/test/deca/context/extension/valid/TAB_decl_simple.deca
{
    int[] a;
    int[][] b;
    float[] aa;
    float[][] bb;
    int i;
    float f;
}