src/test/deca/context/extension/invalid/TAB_match_type.deca
{
    float[] a = new int [1];
}